Fixed issues on mobile devices

--- a/src/components/canvas.css
+++ b/src/components/canvas.css
@@ -37,7 +37,7 @@
   left: 0;
   right: 0;
   top: 0;
-  bottom: 10em;
+  bottom: 8em;
   border: 1px solid green;
   background-color: lightgrey
 }
