--- a/src/components/toolbar.scss
+++ b/src/components/toolbar.scss
@@ -3,24 +3,23 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	cursor: pointer;
 
 	.info-bar {
 		.option-button {
-			width: 4em;
-			height: 4em;
+			width: 2.5em;
+			height: 2.5em;
 			border-radius: 0.3em;
-			margin: 0.5em;
+			margin: 0.3em;
 			background: white;
-			z-index: 2;
 		}
 
 		.curr-block-display {
-			width: 4em;
-			height: 4em;
+			width: 2.5em;
+			height: 2.5em;
 			border-radius: 50%;
-			margin: 0.5em;
+			margin: 0.3em;
 			background: white;
-			z-index: 2;
 		}
 
 		.disabled {
